# Changes to be committed: #	modified:   App.js #	modified:   app.json #	new file:   assets/favicon-old.png #	new file:   assets/favicon.ico #	modified:   assets/favicon.png #	modified:   assets/icon.png #	modified:   assets/splash.png #	new file:   eas.json

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "app-imagen-reactnative",
+    "name": "ImageStick1",
     "slug": "app-imagen-reactnative",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -9,19 +9,25 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#25292e"
     },
     "ios": {
       "supportsTablet": true
     },
     "android": {
+      "package": "com.rivaltec.imagestick1",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/icon.png",
+        "backgroundColor": "#25292e"
       }
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "13fd4835-49ea-40e3-9e7d-b6bf37cb416a"
+      }
     }
   }
 }
